<resources>
    <string name="app_name">spa_study_app_250105</string>
    <string name="loading_activity_title">SPA Practice</string>
    <string name="start_button">START</string>
    <string name="main_page_title">MENU</string>
    <string name="main_page_sub_title_daily_word">Word Practice</string>
    <string name="main_page_sub_title_daily_study">Daily Study</string>
    <string name="main_page_sub_title_daily_test">Daily Test</string>
    <string name="main_page_sub_title_grammar_practice">Grammar Practice</string>
    <string name="main_page_sub_title_spa_test">SPA Test</string>
    <string name="main_page_sub_title_america_headline">Today Article</string>
    <string name="main_page_sub_title_app_setting">Setting</string>
    <string name="dialog_daily_word_title">Choose what you want to do</string>
    <string name="dialog_daily_word_word">Word</string>
    <string name="dialog_daily_word_study">Study</string>
    <string name="dialog_daily_word_test">Test</string>
    <string name="dialog_user_word_english_text">English : </string>
    <string name="dialog_user_word_korean_text">Korean : </string>
    <string name="dialog_user_word_english">apple</string>
    <string name="dialog_user_word_korean">사과</string>
    <string name="dialog_user_word_save">SAVE</string>
    <string name="dialog_user_word_ok">OK</string>
    <string name="layout_title">Title</string>
    <string name="word_korean">Word Korean</string>
    <string name="word_english">Word English</string>
    <string name="example_interpretation">Example Interpretation</string>
    <string name="example_sentence">Example Sentence</string>
    <string name="daily_study_personal_question">Personal Question</string>
        <string name="personal_question_daily_routine">Daily Routine</string>
            <string name="personal_question_daily_routine_company">Company</string>
            <string name="personal_question_daily_routine_ride">Ride</string>
            <string name="personal_question_daily_routine_travel">Travel</string>
        <string name="personal_question_things_i_like">Things I Like</string>
            <string name="personal_question_things_i_like_movie">Movie</string>
            <string name="personal_question_things_i_like_food">Food</string>
            <string name="personal_question_things_i_like_Place">Place</string>
        <string name="personal_question_things_i_do">Things I Do</string>
            <string name="personal_question_things_i_do_health">Health</string>
            <string name="personal_question_things_i_do_stress">Stress</string>
            <string name="personal_question_things_i_do_relationship">Relationship</string>
        <string name="personal_question_past_work">Past Work</string>
            <string name="personal_question_past_work_weather">Weather</string>
            <string name="personal_question_past_work_travel">Travel</string>
            <string name="personal_question_past_work_weekend">Weekend</string>
        <string name="personal_question_guessing">Guessing</string>
            <string name="personal_question_guessing_society">Society</string>
            <string name="personal_question_guessing_vacation">Vacation</string>
            <string name="personal_question_guessing_policy">Policy</string>
    <string name="daily_study_summarize_passage">Summarize Passage</string>
            <string name="summarize_passage_common">Common</string>
            <string name="summarize_passage_daily_life_1">Daily Life #1</string>
            <string name="summarize_passage_daily_life_2">Daily Life #2</string>
            <string name="summarize_passage_company">Company</string>
            <string name="summarize_passage_technology">Technology</string>
            <string name="summarize_passage_daily_life_3">Daily Life #3</string>
            <string name="summarize_passage_effect_of_music">Effect Of Music</string>
            <string name="summarize_passage_importance_helmet">Importance Of Helmet</string>
            <string name="summarize_passage_internet_sns">Internet And SNS</string>
            <string name="summarize_passage_importance_sleep">Importance Of Sleep</string>
            <string name="summarize_passage_internet">Internet</string>
    <string name="daily_study_tell_your_opinion">Tell Your Opinion</string>
        <string name="tell_your_opinion_company">Company</string>
            <string name="tell_your_opinion_company_clothes">Clothes</string>
            <string name="tell_your_opinion_company_relationship">Relationship</string>
            <string name="tell_your_opinion_company_motivation">Motivation</string>
        <string name="tell_your_opinion_technology">Technology</string>
            <string name="tell_your_opinion_technology_internet_sns">Internet And SNS</string>
            <string name="tell_your_opinion_technology_changeway">Change Way</string>
            <string name="tell_your_opinion_technology_newtech">New Tech</string>
        <string name="tell_your_opinion_societyculture">Society And Culture</string>
            <string name="tell_your_opinion_societyculture_manners">Manners</string>
            <string name="tell_your_opinion_societyculture_sexchange">Sex Change</string>
            <string name="tell_your_opinion_societyculture_moving">Moving</string>
        <string name="tell_your_opinion_raw_policy">Raw And Policy</string>
            <string name="tell_your_opinion_raw_policy_smokingarea">Smoking Area</string>
            <string name="tell_your_opinion_raw_policy_tech_develop">Tech Development</string>
            <string name="tell_your_opinion_raw_policy_update_law">Update Law</string>
        <string name="tell_your_opinion_prefer">Prefer</string>
            <string name="tell_your_opinion_prefer_how_to_feedback">How To Feedback</string>
            <string name="tell_your_opinion_prefer_how_to_pay">How To Pay</string>
            <string name="tell_your_opinion_prefer_way_to_life">Way To Life</string>
        <string name="tell_your_opinion_agree_or_not">Agree Or Not</string>
            <string name="tell_your_opinion_agree_or_not_aboard">Aboard</string>
            <string name="tell_your_opinion_agree_or_not_work_at_home">Work At Home</string>
            <string name="tell_your_opinion_agree_or_not_way_to_study">Way To Study</string>
    <string name="daily_study_describe_graph_and_photo">Describe Graph And Photo</string>
        <string name="describe_graph_and_photo_bar_graph">Bar Graph</string>
            <string name="describe_graph_photo_bar_graph_common">Common</string>
            <string name="describe_graph_photo_bar_graph_1_bar_1">Case_#1</string>
            <string name="describe_graph_photo_bar_graph_2_bar_2">Case_#2</string>
            <string name="describe_graph_photo_bar_graph_3_bar_3">Case_#3</string>
        <string name="describe_graph_and_photo_pie_graph">Pie Graph</string>
            <string name="describe_graph_photo_pie_graph_common">Common</string>
            <string name="describe_graph_photo_pie_graph_4_pie_1">Case_#1</string>
            <string name="describe_graph_photo_pie_graph_5_pie_2">Case_#2</string>
            <string name="describe_graph_photo_pie_graph_6_pie_3">Case_#3</string>
        <string name="describe_graph_and_photo_line_graph">Line Graph</string>
            <string name="describe_graph_photo_line_graph_common">Common</string>
            <string name="describe_graph_photo_line_graph_7_line_1">Case_#1</string>
            <string name="describe_graph_photo_line_graph_8_line_2">Case_#2</string>
            <string name="describe_graph_photo_line_graph_9_line_3">Case_#3</string>
        <string name="describe_graph_and_photo_photo_describe">Photo Describe</string>
            <string name="describe_graph_photo_describe_photo_common">Common</string>
            <string name="describe_graph_photo_10_describe_photo_1">Case_#1</string>
            <string name="describe_graph_photo_11_describe_photo_2">Case_#2</string>
            <string name="describe_graph_photo_12_describe_photo_3">Case_#3</string>
        <string name="describe_graph_and_photo_photo_compare">Photo Compare</string>
            <string name="describe_graph_photo_compare_photo_common">Common</string>
            <string name="describe_graph_photo_13_compare_photo_1">Case_#1</string>
            <string name="describe_graph_photo_14_compare_photo_2">Case_#2</string>
            <string name="describe_graph_photo_15_compare_photo_3">Case_#3</string>
        <string name="describe_graph_and_photo_photo_prefer">Photo Prefer</string>
            <string name="describe_graph_photo_prefer_photo_common">Common</string>
            <string name="describe_graph_photo_16_prefer_photo_1">Case_#1</string>
            <string name="describe_graph_photo_17_prefer_photo_2">Case_#2</string>
            <string name="describe_graph_photo_18_prefer_photo_3">Case_#3</string>
        <string name="describe_graph_and_photo_sell_object">Sell Object</string>
            <string name="describe_graph_photo_sell_object_common">Common</string>
            <string name="describe_graph_photo_19_sell_object_1">Case_#1</string>
            <string name="describe_graph_photo_20_sell_object_2">Case_#2</string>
            <string name="describe_graph_photo_21_sell_object_3">Case_#3</string>
    <string name="setting_tts_speed">TTS Speed : </string>
    <string name="setting_tts_speed_description">You can control TTS sound speed here.(x0.5 ~ x1.5)</string>
    <string name="setting_tts_speed_down"> ◀◀ </string>
    <string name="setting_tts_speed_up"> ▶▶ </string>
    <string name="setting_spa_test_answer_second">SPA Test Answer Time : </string>
    <string name="setting_spa_test_answer_second_description">You can control Answer Time here.</string>
    <string name="setting_spa_test_answer_second_1minute">1 Minute</string>
    <string name="setting_spa_test_answer_second_2minute">2 Minute</string>
    <string name="setting_user_word">User Word : </string>
    <string name="setting_user_word_description">Before reinstall program, backup your vocabulary.\nAnd when you reinstall App, reload your vocabulary.</string>
    <string name="setting_user_word_backup">Backup</string>
    <string name="setting_user_word_load">Reload</string>
    <string name="setting_user_word_delete">Delete</string>
    <string name="setting_user_word_delete_warning">[경고]\n파일이 삭제되며 다시는 복구할 수 없습니다.</string>
    <string name="spa_test_1">Test #1</string>
    <string name="spa_test_2">Test #2</string>
    <string name="spa_test_3">Test #3</string>
    <string name="spa_test_4">Test #4</string>
    <string name="spa_test_5">Test #5</string>
    <string name="spa_test_6">Test #6</string>
    <string name="spa_test_7">Test #7</string>
    <string name="spa_test_8">Test #8</string>
    <string name="spa_test_9">Test #9</string>
    <string name="spa_test_10">Test #10</string>
    <string name="spa_examination_hall_title"> SPA Exam</string>
    <string name="spa_test_question_1">Question #1</string>
    <string name="spa_test_question_2">Question #2</string>
    <string name="spa_test_question_3">Question #3</string>
    <string name="spa_test_question_4">Question #4</string>
    <string name="spa_test_question_all">Question All</string>
    <string name="spa_test_play_pause">Play/Pause</string>
    <string name="spa_test_stop">Stop</string>
    <string name="spa_test_done">Done</string>
    <string name="spa_test_user_answer"> </string>
    <string name="spa_examination_result_title"> SPA Exam Answer Sheet</string>
    <string name="spa_examination_1_question_1">Describe your routine after you get off from work.</string>
</resources>