<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spa_test_page_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SpaTestMain">

    <!-- 타이틀 -->
    <TextView
        android:id="@+id/daily_spa_test_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/main_page_sub_title_spa_test"
        android:textSize="100sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/spa_test_1"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/spa_test_1"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/daily_spa_test_main_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spa_test_2"/>

    <Button
        android:id="@+id/spa_test_2"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/spa_test_2"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/daily_spa_test_main_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spa_test_1"/>

    <Button
        android:id="@+id/spa_test_3"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:text="@string/spa_test_3"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/spa_test_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spa_test_4"/>


    <Button
        android:id="@+id/spa_test_4"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/spa_test_4"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/spa_test_2"
        app:layout_constraintStart_toEndOf="@id/spa_test_3"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/spa_test_5"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:text="@string/spa_test_5"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/spa_test_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spa_test_6"/>

    <Button
        android:id="@+id/spa_test_6"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/spa_test_6"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/spa_test_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spa_test_5"/>

    <Button
        android:id="@+id/spa_test_7"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:text="@string/spa_test_7"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/spa_test_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spa_test_8"/>

    <Button
        android:id="@+id/spa_test_8"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/spa_test_8"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/spa_test_6"
        app:layout_constraintStart_toEndOf="@id/spa_test_7"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/spa_test_9"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:text="@string/spa_test_9"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/spa_test_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spa_test_10"/>

    <Button
        android:id="@+id/spa_test_10"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/spa_test_10"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/spa_test_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spa_test_9"/>


</androidx.constraintlayout.widget.ConstraintLayout>

