<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GrammarMain">

    <TextView
        android:id="@+id/setting_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/main_page_sub_title_app_setting"
        android:textSize="100sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/setting_tts_speed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/setting_tts_speed"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/setting_page_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/setting_tts_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/setting_tts_speed"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/setting_page_title"
        app:layout_constraintLeft_toRightOf="@id/setting_tts_speed_title"/>

    <TextView
        android:id="@+id/setting_tts_speed_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/setting_tts_speed_description"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/setting_tts_speed_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_tts_speed_down"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/setting_tts_speed_down"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_tts_speed_description"
        app:layout_constraintRight_toLeftOf="@id/btn_reload"/>

    <Button
        android:id="@+id/btn_tts_speed_up"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/setting_tts_speed_up"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/setting_tts_speed_description"
        app:layout_constraintLeft_toRightOf="@id/btn_backup"/>

    <TextView
        android:id="@+id/setting_user_word_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/setting_user_word"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_tts_speed_down"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/setting_user_word_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/setting_user_word_description"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/setting_user_word_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_backup"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/setting_user_word_backup"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setting_user_word_description"
        app:layout_constraintRight_toLeftOf="@id/btn_reload"/>

    <Button
        android:id="@+id/btn_reload"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/setting_user_word_load"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/setting_user_word_description"
        app:layout_constraintLeft_toRightOf="@id/btn_backup"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/setting_user_word_delete"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@id/setting_user_word_description"
        app:layout_constraintLeft_toRightOf="@id/btn_reload"/>

    </androidx.constraintlayout.widget.ConstraintLayout>