<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_word_dialog_layout"
    android:layout_width="600dp"
    android:layout_height="210dp"
    android:background="@color/dialog">

    <TextView
        android:id="@+id/dialog_english_word_title"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/dialog_user_word_english_text"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_english_word"/>

    <TextView
        android:id="@+id/dialog_english_word"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:text="@string/dialog_user_word_english"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_english_word_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/dialog_korean_word_title"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/dialog_user_word_korean_text"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_english_word_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_korean_word"/>

    <TextView
        android:id="@+id/dialog_korean_word"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:text="@string/dialog_user_word_korean"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_english_word_title"
        app:layout_constraintStart_toEndOf="@id/dialog_korean_word_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_study"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:text="@string/dialog_user_word_save"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_korean_word_title"
        app:layout_constraintRight_toLeftOf="@id/btn_test"/>

    <Button
        android:id="@+id/btn_test"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:text="@string/dialog_user_word_ok"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_korean_word_title"
        app:layout_constraintLeft_toRightOf="@id/btn_study" />

    </androidx.constraintlayout.widget.ConstraintLayout>