<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/daily_word_dialog_layout"
    android:layout_width="600dp"
    android:layout_height="180dp"
    android:background="@color/dialog">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/dialog_daily_word_title"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_word"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/dialog_daily_word_word"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        app:layout_constraintRight_toLeftOf="@id/btn_study"/>

    <Button
        android:id="@+id/btn_study"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/dialog_daily_word_study"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        app:layout_constraintLeft_toRightOf="@id/btn_word"
        app:layout_constraintRight_toLeftOf="@id/btn_test"/>

    <Button
        android:id="@+id/btn_test"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/dialog_daily_word_test"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        app:layout_constraintLeft_toRightOf="@id/btn_study" />

    </androidx.constraintlayout.widget.ConstraintLayout>