<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/daily_word_study_test_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DailyWordStudyTest">

    <TextView
        android:id="@+id/daily_word_study_test_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text= "@string/layout_title"
        android:textSize="100sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/word_korean"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:text= "@string/word_korean"
        android:textSize="60sp"
        android:textColor="@color/black"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daily_word_study_test_title"/>

    <TextView
        android:id="@+id/word_english"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text= "@string/word_english"
        android:textSize="60sp"
        android:textColor="@color/black"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word_korean"/>

    <TextView
        android:id="@+id/example_interpretation"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:text= "@string/example_interpretation"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:maxLines="2"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word_english"/>

    <TextView
        android:id="@+id/example_sentence"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:text= "@string/example_sentence"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:maxLines="2"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/example_interpretation"/>
</androidx.constraintlayout.widget.ConstraintLayout>